<resources>
    <string name="app_name">homeWork2</string>
    <string name="attraction_name">Attractions</string>
    <string name="dining_name">Dining</string>
    <string name="educate_name">Education</string>
    <string name="fam_name">Family</string>
    <string name="health_name">Health</string>
    <string name="office_name">Office</string>
    <string name="promo_name">Promotions</string>
    <string name="radio_name">Radio</string>
    <string name="recipe_name">Recipes</string>
    <string name="sport_name">Sports</string>
    <string name="photo_name">PHOTO</string>
    <string name="title_name">Title</string>
    <string name="price_name">Price</string>
    <string name="location_name">Location</string>
    <string name="describe_name">Description</string>
    <string name="inventory_name">Inventory</string>
    <string name="weight_name">Weight</string>
    <string name="sign_name">Sign in</string>
    <string name="email_name">Email</string>
    <string name="password_name">Password</string>
    <string name="remember_name">Remember</string>
    <string name="forgot_name">Forgot password?</string>
    <string name="just_sign_name">* Just sign in</string>
    <string name="android_name">Android</string>
    <string name="post_name">125\nPosts</string>
    <string name="follower_name">20K\nFollowers</string>
    <string name="following_name">22\nFollowing</string>
    <string name="user_name">Username</string>
    <string name="address_name">Address</string>
    <string name="direction_name">Directions</string>
    <string name="call_name">Call</string>
    <string name="save_name">Save</string>
    <string name="website_name">Website</string>
    <string name="certificated_name">Certificated</string>
    <string name="layout_name">Layouts</string>
    <string name="view_name">Views</string>
</resources>