<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <TextView
        android:id="@+id/photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/title"
        android:layout_alignParentTop="true"
        android:background="@color/colorGrey"
        android:gravity="center"
        android:text="@string/photo_name"
        android:textColor="@color/colorDark"
        android:textSize="80sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/photo"
        android:layout_alignBottom="@id/photo"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/photo_name"
        android:src="@drawable/photo_camera" />

    <TextView
        android:id="@+id/title"
        style="@style/Task2RelativeTheme"
        android:layout_width="match_parent"
        android:layout_above="@id/price"
        android:text="@string/title_name" />

    <TextView
        android:id="@+id/price"
        style="@style/Task2RelativeTheme"
        android:layout_width="80dp"
        android:layout_above="@id/describe"
        android:text="@string/price_name" />

    <TextView
        android:id="@+id/location"
        style="@style/Task2RelativeTheme"
        android:layout_width="match_parent"
        android:layout_above="@id/describe"
        android:layout_toEndOf="@id/price"
        android:text="@string/location_name" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/location"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/location_name"
        android:src="@drawable/location" />

    <TextView
        android:id="@+id/describe"
        style="@style/Task2RelativeTheme"
        android:layout_width="match_parent"
        android:layout_above="@id/inventory"
        android:text="@string/describe_name" />

    <TextView
        android:id="@+id/inventory"
        style="@style/Task2RelativeTheme"
        android:layout_width="100dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:text="@string/inventory_name" />


    <TextView
        android:id="@+id/weight"
        style="@style/Task2RelativeTheme"
        android:layout_width="100dp"
        android:layout_alignEnd="@id/inventory"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:text="@string/weight_name" />

</RelativeLayout>