<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    android:weightSum="100">

    <TextView
        style="@style/TextDarkBold30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="20"
        android:gravity="center_vertical"
        android:text="@string/sign_name" />

    <EditText
        style="@style/Task3EditTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="7"
        android:autofillHints="@string/email_name"
        android:hint="@string/email_name"
        android:inputType="textEmailAddress" />

    <EditText
        style="@style/Task3EditTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_weight="7"
        android:autofillHints="@string/password_name"
        android:hint="@string/password_name"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="39">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:checked="true" />

        <TextView
            style="@style/TextDark18spBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_name" />

        <Button
            style="@style/TextDark18spBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="end"
            android:text="@string/forgot_name"
            android:textAllCaps="false" />
    </LinearLayout>

    <Button
        style="@style/Task3Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="7"
        android:text="@string/sign_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="20"
        android:gravity="bottom"
        android:text="@string/just_sign_name"
        android:textSize="18sp" />

</LinearLayout>