<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow android:layout_weight="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/attraction_name"
            android:src="@drawable/attraction" />

        <TextView
            style="@style/TextDark18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/attraction_name" />
    </TableRow>

    <TableRow android:layout_weight="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/dining_name"
            android:src="@drawable/dining" />

        <TextView
            style="@style/TextDark18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/dining_name" />
    </TableRow>

    <TableRow android:layout_weight="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/educate_name"
            android:src="@drawable/education" />

        <TextView
            style="@style/TextDark18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/educate_name" />
    </TableRow>

    <TableRow android:layout_weight="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/fam_name"
            android:src="@drawable/family" />

        <TextView
            style="@style/TextDark18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/fam_name" />
    </TableRow>

    <TableRow android:layout_weight="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/health_name"
            android:src="@drawable/health" />

        <TextView
            style="@style/TextDark18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/health_name" />
    </TableRow>

    <TableRow android:layout_weight="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/office_name"
            android:src="@drawable/office" />

        <TextView
            style="@style/TextDark18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/office_name" />
    </TableRow>

    <TableRow android:layout_weight="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/promo_name"
            android:src="@drawable/promotion" />

        <TextView
            style="@style/TextDark18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/promo_name" />
    </TableRow>

    <TableRow android:layout_weight="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/radio_name"
            android:src="@drawable/radio" />

        <TextView
            style="@style/TextDark18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/radio_name" />
    </TableRow>

    <TableRow android:layout_weight="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/recipe_name"
            android:src="@drawable/recipe" />

        <TextView
            style="@style/TextDark18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/recipe_name" />
    </TableRow>

    <TableRow android:layout_weight="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/sport_name"
            android:src="@drawable/sport" />

        <TextView
            style="@style/TextDark18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/sport_name" />
    </TableRow>
</TableLayout>