<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:background="@color/colorGrey">

        <TextView
            style="@style/TextDark80sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/photo_name" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/photo_name"
            android:src="@drawable/photo_camera" />
    </FrameLayout>

    <TextView
        style="@style/TextViewWithLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:text="@string/title_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1">

        <TextView
            style="@style/TextViewWithLine"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginEnd="20dp"
            android:text="@string/price_name" />

        <TextView
            style="@style/TextViewWithLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="10dp"
            android:drawableEnd="@drawable/location"
            android:text="@string/location_name" />
    </LinearLayout>

    <TextView
        style="@style/TextViewWithLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:text="@string/describe_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="40dp"
        android:layout_weight="1">

        <TextView
            style="@style/TextViewWithLine"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginEnd="150dp"
            android:text="@string/inventory_name" />

        <TextView
            style="@style/TextViewWithLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="start"
            android:text="@string/weight_name" />
    </LinearLayout>

</LinearLayout>