<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        style="@style/TextDarkBold30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:gravity="center_vertical"
        android:text="@string/android_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:weightSum="3">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/android_name"
            android:src="@drawable/square_image"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:layout_weight="1"
            style="@style/TextDark15sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/post_name" />

        <TextView
            android:layout_weight="1"
            style="@style/TextDark15sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/follower_name" />

        <TextView
            android:layout_weight="1"
            style="@style/TextDark15sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/following_name" />
    </LinearLayout>

    <TextView
        style="@style/TextDark18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:text="@string/user_name" />

    <TextView
        style="@style/TextDark15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_name" />

    <TextView
        style="@style/TextDark15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/describe_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:weightSum="6">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/android_name"
            android:src="@drawable/square_image" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/android_name"
            android:src="@drawable/square_image" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/android_name"
            android:src="@drawable/square_image" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/android_name"
            android:src="@drawable/square_image" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/android_name"
            android:src="@drawable/square_image" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/android_name"
            android:src="@drawable/square_image" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center_vertical">

        <Button
            style="@style/task4BlueText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/directions"
            android:drawablePadding="10dp"
            android:text="@string/direction_name" />

        <Button
            style="@style/task4BlueText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/call"
            android:drawablePadding="10dp"
            android:text="@string/call_name" />

        <Button
            style="@style/task4BlueText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/save_star"
            android:drawablePadding="10dp"
            android:text="@string/save_name" />

        <Button
            style="@style/task4BlueText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/website"
            android:drawablePadding="10dp"
            android:text="@string/website_name" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:contentDescription="@string/android_name"
        android:src="@drawable/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:contentDescription="@string/android_name"
            android:src="@drawable/square_image" />

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:contentDescription="@string/android_name"
            android:src="@drawable/square_image" />

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:contentDescription="@string/android_name"
            android:src="@drawable/square_image" />

    </LinearLayout>

</LinearLayout>